Project

General

Profile

Actions

Bug #16903

closed

Compilation error on x86_64-cygwin

Bug #16903: Compilation error on x86_64-cygwin

Added by fd0 (Daisuke Fujimura) over 6 years ago. Updated over 6 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.8.0dev (2020-05-20T01:52:32Z master 2480ef904c) [x86_64-cygwin]
[ruby-core:98452]

Description

Compilation error on x86_64-cygwin.

compiling io.c
io.c: In function 'rb_cloexec_pipe':
io.c:412:9: error: 'ret' undeclared (first use in this function)
  412 |     if (ret == 0 && descriptors[1] == -1) {
      |         ^~~
io.c:412:9: note: each undeclared identifier is reported only once for each function it appears in
io.c: At top level:
cc1: warning: unrecognized command line option '-Wno-self-assign'
cc1: warning: unrecognized command line option '-Wno-parentheses-equality'
cc1: warning: unrecognized command line option '-Wno-constant-logical-operand'
make: *** [Makefile:425: io.o] Error 1

Files

cygwin.patch (364 Bytes) cygwin.patch fd0 (Daisuke Fujimura), 05/20/2020 01:28 PM
Actions

Also available in: PDF Atom