Fixed a variable name [Bug #16903]

Fix up of 0e3b0fcdba7

From: fd0 (Daisuke Fujimura)